Refactor shape rendering and normalization in SubmissionCanvas and shapeHelpers; update styles in VotingPairView and index.css

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     /* Light theme colors */
     --color-bg-primary: #fafaf7;
     --color-bg-secondary: #E6E6DB;
-    --color-bg-tertiary: orange;
+    --color-bg-tertiary: #F0E7D8;
     --color-text-primary: #37352f;
     --color-text-secondary: #6b6b60;
     --color-text-tertiary: #241023;
